[gd_scene load_steps=9 format=2]

[ext_resource path="res://components/EditTasksListItem.gd" type="Script" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://themes/panel_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://themes/x_small_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://shaders/panel_shader.tres" type="Material" id=5]
[ext_resource path="res://assets/img/btn-edit.png" type="Texture" id=6]
[ext_resource path="res://assets/img/btn-edit-pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/img/icon-checked.png" type="Texture" id=9]

[node name="EditTasksListItem" type="PanelContainer"]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -493.0
margin_bottom = -550.0
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_right = 531.0
margin_bottom = 48.0
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 48.0
alignment = 1

[node name="CheckMark" type="TextureRect" parent="HBoxContainer/VBoxContainer3"]
margin_top = 9.0
margin_right = 30.0
margin_bottom = 39.0
texture = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 50.0
margin_right = 479.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_constants/separation = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 429.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Hello"
align = 1
valign = 1

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 25.0
margin_right = 429.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Description"
align = 1
valign = 1
autowrap = true
max_lines_visible = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 499.0
margin_right = 529.0
margin_bottom = 48.0
alignment = 1

[node name="EditButton" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 9.0
margin_right = 30.0
margin_bottom = 39.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
stretch_mode = 3

[connection signal="gui_input" from="." to="." method="_on_EditTasksListItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_EditTasksListItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EditTasksListItem_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/EditButton" to="." method="_on_EditButton_pressed"]
